# cpp-junk

./: .gitignore  CMakeLists.txt  core
bigfac/: CMakeLists.txt  main.cpp
bigfac/cmake-modules/: FindGMP.cmake
chat/client/: CMakeLists.txt  main.cpp
chat/server/: CMakeLists.txt  main.cpp
collatz/: CMakeLists.txt  main.cpp
confour/: CMakeLists.txt  game.cpp  game.h  main.cpp
galeshapely/: CMakeLists.txt
galeshapely/include/: GSItem.h
galeshapely/src/: GSItem.cpp  main.cpp
letfreqs/: CMakeLists.txt  main.cpp
mandelbrot/: CMakeLists.txt  main.cpp  mandelbrot.glsl
mandelbrot/cmake-modules/: FindLibDL.cmake
mandelbrot/include/: fragment.glsl
mandelbrot/include/glad/: glad.h
mandelbrot/src/: CMakeLists.txt  glad.c  main.cpp  mandelbrot
rabinkarp/: CMakeLists.txt  input.txt
rabinkarp/src/: main.cpp
segtree/: CMakeLists.txt
segtree/include/: SegTree.h
segtree/src/: SegTree.cpp  main.cpp
strfreqs/: CMakeLists.txt
strfreqs/src/: main.cpp
timefetch/: CMakeLists.txt  main.cpp
vowelcount/: CMakeLists.txt  main.cpp  vowelcount
